stave-macros/tests/fail/methods_requires_optional_field.rs
use stave_macros::{builder, methods};

#[builder]
struct Widget {
    #[stave(required)]
    name: String,
    note: String,
}

#[methods]
impl Widget {
    #[requires(note)]
    fn go(&self) {}
}

fn main() {}
